--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.50.0",
     "vue": "^2.7.14",
     "vue-axios": "^2.1.5",
+    "vue-carousel": "^0.18.0",
     "vue-loader": "^17.2.2",
     "vue-router": "^3.2.0",
     "vue-select": "^3.20.2",
