--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
+    "dotenv": "^16.3.1",
     "node": "^20.2.0",
     "sass": "^1.50.0",
     "vue": "^2.7.14",
